--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -21,7 +21,10 @@
             <svg class="svg-item" width="26" height="6">
               <use href="./images/products/sprit.svg#icon-group-4"></use>
             </svg>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+            <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <a class="flipping-svg"><svg class="svg-item" width="20" height="20">
+              <use href="./images/products/sprit.svg#icon-arrow-right2"></use>
+            </svg></a>
           </div>
         </li>
         <li class="products-item">
@@ -42,7 +45,10 @@
             <svg class="svg-item" width="26" height="6">
               <use href="./images/products/sprit.svg#icon-group-4"></use>
             </svg>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+            <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <a class="flipping-svg" ><svg class="svg-item" width="20" height="20">
+              <use href="./images/products/sprit.svg#icon-arrow-right2"></use>
+            </svg></a>
           </div>
         </li>
         <li class="products-item">
@@ -63,7 +69,10 @@
             <svg class="svg-item" width="26" height="6">
               <use href="./images/products/sprit.svg#icon-group-4"></use>
             </svg>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+            <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <a class="flipping-svg" ><svg class="svg-item" width="20" height="20">
+              <use href="./images/products/sprit.svg#icon-arrow-right2"></use>
+            </svg></a>
           </div>
         </li>
       </ul>
