--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -23,7 +23,6 @@
     letter-spacing: 0.04em;
   }
 }
-
 .products-title {
   font-style: normal;
   font-weight: normal;
@@ -65,12 +64,10 @@
   margin: 0;
   width: 100%;
   border-radius: 24px;
-  margin-top: 144px;
-  @media screen and (max-width: 767px) {
-    max-width: 280px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  margin-top: 161px;
+  max-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc((100% - 60px) / 3);
     max-width: 220px;
@@ -100,13 +97,24 @@
     background: #c2e297;
     border-radius: 4px;
   }
+  & div {
+    width: 100%;
+    padding-bottom: 40px;
+  }
 }
-img{
+img {
   position: absolute;
-  top: -50%;
+  top: -35%;
   padding-top: 31px;
+  width: 100%;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    top: -25%;
+  }
+  @media screen and (min-width: 1200px) {
+    top: -50%;
+  }
 }
-.product-item-title{
+.product-item-title {
   margin: 0;
   padding: 0;
   font-size: 20px;
@@ -114,20 +122,73 @@ img{
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #FFFFFF;
-  padding-top: 162px;
+  color: #ffffff;
+  padding-top: 152px;
   width: 100%;
   @media screen and (min-width: 1200px) {
     font-size: 30px;
     line-height: 1.13;
+    padding-top: 162px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 152px;
+  }
+  &:not(:first-child) {
+    padding-top: 291px;
   }
 }
-.svg-item{
+.svg-item {
   margin: 0;
   padding: 0;
   width: 100%;
   margin-top: 30px;
   @media screen and (min-width: 1200px) {
     margin-top: 32px;
+  }
+}
+.product-description {
+  margin: 0;
+  padding: 0;
+  font-family: DM Sans, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.52;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  width: 100%;
+  max-width: 200px;
+  margin-top: 31px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 198px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 241px;
+  }
+  margin-right: auto;
+  margin-left: auto;
+}
+.flipping-svg {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 40px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 62px;
+  }
+  & svg {
+    margin: 0;
+    padding: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    fill: #d41443;
   }
 }
