--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,1 +1,22 @@
-// Kovalchuk
+
+.benefits {
+
+    & h2 {
+        margin: auto;
+    }
+
+    & h3 {
+        margin: auto;
+    }
+}
+.benefits-description {
+    @media screen and (min-width: 1200px) {
+        background-image: url(../../images/splashing_milk@2x.jpg);
+      }
+}
+ 
+.benefits-list-item {
+    @media screen and (max-width: 767px) {
+        background-image: url(../../images/splashing_milk.jpg);
+      }
+}
