completes programme and reasons sections adaptive coding

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,5 @@
 @import './layout/advantages';
 @import './layout/benefits';
 @import './layout/description';
+@import './layout/programme';
+@import './layout/reasons';
