--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -10,7 +10,7 @@
   }
 
   .garants .feature-list__container {
-    //   outline: 1px solid teal;
+    outline: 1px solid teal;
     padding: 20px;
     background-color: var(--grey-bcg-color);
   }
@@ -19,29 +19,14 @@
     margin-bottom: 23px;
   }
   .feature-list__item {
-    // outline: 1px solid rgb(58, 128, 0);
-    position: relative;
-    display: inline-flex;
+    outline: 1px solid rgb(58, 128, 0);
+    // position: relative;
+    // display: inline-flex;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 20px;
     margin-left: 20px;
-  }
-  .item {
-    display: block;
-
-    // outline: 1px solid rgb(128, 109, 0);
-    position: absolute;
-    top: 17px;
-    left: 3px;
-    min-height: 68px;
-    width: auto;
-  }
-  .feature-list__icon {
-    // outline: 1px solid red;
-    width: 20px;
-    height: 15px;
   }
 
   .feature-list__description span {
