--- a/src/sass/components/_page-logo.scss
+++ b/src/sass/components/_page-logo.scss
@@ -1,27 +1,61 @@
 .logo {
   display: inline-block;
-  width: 80px;
-  height: 30px;
-  @media screen and (min-width: 768px) {
-    width: 128px;
-    height: 45px;
-  }
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.12;
+  letter-spacing: 0.04em;
+  text-decoration: none;
+  text-align: center;
+
+  color: var(--main-color);
 }
 .logo-top {
   display: flex;
+  align-items: center;
   margin-bottom: 4px;
+}
+.logo-icon {
+  width: 15px;
+  height: 20px;
+  margin-right: 4px;
+  margin-left: 4px;
 }
 .logo-bottom {
   display: flex;
-  width: 100%;
+  justify-content: center;
+  font-weight: bold;
+  font-weight: 500;
+  font-size: 7px;
+  line-height: 1.12;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 }
-.hell {
-  margin-top: 4px;
-  margin-right: 4px;
+
+@media screen and(min-width: 768px) {
+  .logo-accent {
+    color: var(--orange-color);
+  }
+  .logo-top {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.23;
+  }
+  .logo-bottom {
+    font-weight: bold;
+    font-size: 8px;
+    line-height: 1.12;
+    letter-spacing: 0.18em;
+  }
+  .logo-icon {
+    width: 22px;
+    height: 30px;
+  }
 }
-.icon-fire {
-  margin-right: 4px;
-}
-.icon-en {
-  margin-top: 4px;
+
+.logo.is-open {
+  color: var(--white-color);
+  z-index: 5;
+  position: fixed;
+  top: 42px;
+  left: 40px;
 }
