--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,5 +1,9 @@
 <section class="footer">
     <div class="container">
-        <a href="./index.html" class="footer__logo"></a>
-    </div>    
+        <a href="./index.html" class="footer__logo">
+            <svg width="84.12" height="30">
+                <use href="./icons/footer-icons/footer-logo.svg"></use>
+            </svg>
+        </a>
+    </div> 
 </section>
