--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -20,13 +20,21 @@
   }
   .feature-list__item {
     outline: 1px solid rgb(58, 128, 0);
-    // position: relative;
-    // display: inline-flex;
+    position: relative;
+    // display: flex;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 20px;
     margin-left: 20px;
+  }
+  .feature-list__description::before {
+    outline: 1px solid red;
+    position: absolute;
+    contain: '';
+    width: 20px;
+    height: 20px;
+    background-image: url('../images/campfire.svg');
   }
 
   .feature-list__description span {
