Добвавляет слайдер к проекту

--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -6,7 +6,7 @@
     text-align: center;
 
     &-reviews{
-@media screen and(min-width: 320px){
+@media screen and(max-width: 1343px){
     padding-top:50px;
     padding-bottom: 50px;
 }
