--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,22 +1,12 @@
 <section class="section section-reviews">
   <div class="container-reviews">
     <h2 class="reviews-title">Отзывы выпускников</h2>
-  
+
 <!-- Слайдер -->
     <div class="slider">  
+
       <div class="slider-item">
-        <button class="button left" type="button">
-          <svg  class="icon-arrow">
-           <use href="./images/sprite.svg#Arrow-right"></use>
-         </svg>
-       
-        </button>
-        <button class="button right" type="button">
-         <svg  class="icon-arrow">
-           <use  href="./images/sprite.svg#Arrow-left"></use>
-         </svg>
-        </button> 
-        
+        <div class="container-photo">
         <div class="slider-photo">
           <picture>
             <source srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x" type="image/webp" />
@@ -24,7 +14,7 @@
               src="./images/Reviews/photo6.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
           </picture>
       
-          <svg class="logo-vk" width="30" height="30">
+          <svg class="logo-vk">
             <use href="./images/sprite.svg#Vk"></use>
           </svg>
         </div>
@@ -32,7 +22,7 @@
         <div class="slider-description">
           <h2 class="name">Тоня Кучеровская</h2>
       
-          <p class="text" lang="ru">Выпуск 2015-го года, Національний університет біоресурсів
+          <p class="text" lang="ru">Випуск 2015-го года, Національний університет біоресурсів
             і природокористування України</p>
           <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
             словниковий запас. З
@@ -44,8 +34,69 @@
       </div>
     </div>
 
+    <!-- Слайдер 2 -->
+    <div class="slider-item">
+        <div class="container-photo">
+        <div class="slider-photo">
+          <picture>
+            <source srcset="./images/Reviews/photo1.webp 1x , ./images/Reviews/photo1@2x.webp 2x" type="image/webp" />
+            <img class="photo" srcset="./images/Reviews/photo1.jpg 1x, ./images/Reviews/photo1@2x.jpg 2x"
+              src="./images/Reviews/photo1.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
+          </picture>
+      
+          <svg class="logo-vk" width="30" height="30">
+            <use href="./images/sprite.svg#Vk"></use>
+          </svg>
+        </div>
+      
+        <div class="slider-description">
+          <h2 class="name">Валерія Власова</h2>
+      
+          <p class="text" lang="ru">Випуск 2015-го года, Національний університет біоресурсів
+            і природокористування України</p>
+          <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+            словниковий запас. З
+            першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
+            справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи
+            страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a href="#"
+              class="link-reviews">Читать дальше</a> </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Слайдер 3 -->
+    <div class="slider-item">
+      <div class="container-photo">
+      <div class="slider-photo">
+        <picture>
+          <source srcset="./images/Reviews/photo2.webp 1x , ./images/Reviews/photo2@2x.webp 2x" type="image/webp" />
+          <img class="photo" srcset="./images/Reviews/photo2.jpg 1x, ./images/Reviews/photo2@2x.jpg 2x"
+            src="./images/Reviews/photo2.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
+        </picture>
+    
+        <svg class="logo-vk" width="30" height="30">
+          <use href="./images/sprite.svg#Vk"></use>
+        </svg>
+      </div>
+    
+      <div class="slider-description">
+        <h2 class="name">Софія Добра</h2>
+    
+        <p class="text" lang="ru">Випуск 2015-го года, Національний університет біоресурсів
+          і природокористування України</p>
+        <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+          словниковий запас. З
+          першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
+          справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи
+          страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a href="#"
+            class="link-reviews">Читать дальше</a> </p>
+      </div>
+    </div>
+  </div>
+  </div>
+
     <!-- Список икнок tablet, desktop -->
-      <ul class="reviews-phone list">
+      <ul class="reviews list">
         <li class="item">
           <a class="link" href="">
             <picture>
@@ -117,7 +168,7 @@
       </ul>
 
       <!-- Список иконок phone -->
-      <ul class="reviews list">
+      <ul class="reviews-phone list">
         <li class="item">
           <a class="link" href="">
             <picture>
@@ -127,6 +178,7 @@
             </picture>
           </a>
         </li>
+     
         <li class="item">
           <a class="link" href="">
             <picture>
@@ -136,7 +188,7 @@
             </picture>
           </a>
         </li>
-
+  
         <li class="item">
           <a class="link" href="">
             <picture>
@@ -147,5 +199,6 @@
           </a>
         </li>
       </ul>
+    </div>
   </div>  
 </section>
