--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -53,7 +53,7 @@
 .problems-block-white {
     background-color: var(--txt-light);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-    z-index: 1;
+    z-index: 99;
     @media screen and (min-width: 320px) and (max-width: 767px) {
         width: 280px;
         height: 488px;
@@ -148,6 +148,27 @@
     width: 336px;
     @include font(700, 20px, 1.2, 0.08em);
 }
-}
+.problems-container {
+    position: relative;
+    max-width: 1680px;
 
+}
+.problems-icon {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    fill: var(--txt-dark-grey);
+}
+.problems-block-white {
+    position: absolute;
+    top: 348;
+    left: 150;
+  
+    width: 1314px;
+    z-index: 99;
+  
+  
+}
+}
 
