--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,9 +1,12 @@
 <section class="section"> 
-    <div class="container problems-container">
+    <div class="problems-container">
         <h2 class="problems-title">Главные проблемы учеников <br>
             на English ВНО, которые <br>
             мы <span class="problems-word-color">помогаем</span> решить
         </h2>
+        <svg class="problems-icon" width="407" height="472">
+            <use href="./images/sprite.svg#icon-fire-grey"></use>
+          </svg>
         <div class="problems-block-white">
         <ul class="problems-list">
             <li class="problems-item">
