--- a/src/sass/components/_page-logo.scss
+++ b/src/sass/components/_page-logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  display: inline-block;
+  display: block;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.12;
@@ -8,6 +8,11 @@
   text-align: center;
 
   color: var(--main-color);
+  z-index: 10;
+  .menu.is-open & {
+    color: var(--white-color);
+    z-index: 1000;
+  }
 }
 .logo-top {
   display: flex;
@@ -24,7 +29,6 @@
   display: flex;
   justify-content: center;
   font-weight: bold;
-  font-weight: 500;
   font-size: 7px;
   line-height: 1.12;
   letter-spacing: 0.04em;
