--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a href="./index.html" class="footer__logo">
             <svg width="84.12" height="30">
-                <use href="./icons/footer-icons/footer-logo.svg"></use>
+                <use href="./icons/footer-sprite.svg#icon-footer-logo"></use>
             </svg>
         </a>
     </div> 
