--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,6 +3,24 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
+.example {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
+  color: #212121;
+  max-width: 960px;
+  padding: 15px;
+}
+
+.example code {
+  font-family: monospace;
+  font-size: 16px;
+  font-weight: 700;
+  background-color: teal;
+  color: white;
+  padding: 2px 6px;
+  border-radius: 2px;
+}
+
 :root {
   --primaty-text-color: #3D3D3D;
   --secondary-text-colot: #B9B9B9 ;
@@ -22,263 +40,4 @@ img {
   margin: 0;
   list-style: none;
 }
-
-.registration-container {
-  width: 100%;
-  padding: 0 20px;
-}
-
-@media screen and (min-width: 320px) {
-  .registration-container {
-    max-width: 320px;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .registration-container {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .registration-container {
-    max-width: 1344px;
-  }
-}
-
-.registration {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background-color: #111518;
-  background-image: url("/images/registration-img/registration-mobile-min.png");
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 320px 507px;
-}
-
-.registration-title {
-  font-family: Montserrat;
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 1.357;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-color);
-  margin: 0 auto 30px auto;
-  width: 280px;
-}
-
-.accent-words {
-  color: var(--accent-color);
-}
-
-.registration-text {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.25;
-  text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  letter-spacing: 0.08em;
-  color: var(--primary-white-color);
-  margin: 0 auto 30px auto;
-  width: 280px;
-}
-
-.registration-form {
-  text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.registration-form-input {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: block;
-  width: 100%;
-  background-color: transparent;
-  border: 1px solid white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  height: 48px;
-  margin-bottom: 20px;
-}
-
-.registration-form-input::-webkit-input-placeholder {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  color: var(--primary-white-color);
-  letter-spacing: 0.08em;
-  padding-left: 28px;
-}
-
-.registration-form-input:-ms-input-placeholder {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  color: var(--primary-white-color);
-  letter-spacing: 0.08em;
-  padding-left: 28px;
-}
-
-.registration-form-input::-ms-input-placeholder {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  color: var(--primary-white-color);
-  letter-spacing: 0.08em;
-  padding-left: 28px;
-}
-
-.registration-form-input::placeholder {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  color: var(--primary-white-color);
-  letter-spacing: 0.08em;
-  padding-left: 28px;
-}
-
-.registration-button {
-  margin-top: 30px;
-  width: 260px;
-  height: 48px;
-  background: var(--accent-color);
-  font-family: Montserrat;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 1.25;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  border: none;
-  color: var(--primary-white-color);
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
-  .registration {
-    background-color: #111518;
-    background-image: url("/images/registration-img/registration-mobile@2x.png");
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .registration {
-    background-color: #111518;
-    background-image: url("/images/registration-img/registration-tablet.png");
-    padding-bottom: 71px;
-    background-size: 768px 520px;
-  }
-  .registration-title {
-    font-size: 26px;
-    line-height: 1.3;
-    width: 688px;
-  }
-  .registration-text {
-    font-size: 14px;
-    line-height: 1.219;
-    margin: 0 auto 40px auto;
-    width: 452px;
-  }
-  .registration-form {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .registration-form-input {
-    width: 390px;
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
-  .registration {
-    background-color: #111518;
-    background-image: url("/images/registration-img/registration-tablet@2x.png");
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .registration {
-    background-color: #111518;
-    background-image: url("/images/registration-img/registration-desktop.png");
-    padding-top: 100px;
-    padding-bottom: 62px;
-    background-size: 1680px 840px;
-  }
-  .registration-title {
-    font-size: 46px;
-    line-height: 1.3;
-    margin: 0 auto 50px auto;
-    width: 1090px;
-  }
-  .registration-text {
-    font-size: 30px;
-    line-height: 1.23;
-    margin: 0 auto 56px auto;
-    width: 1090px;
-  }
-  .registration-form-input {
-    width: 478px;
-    height: 70px;
-    margin-bottom: 30px;
-  }
-  .registration-form-input::-webkit-input-placeholder {
-    font-size: 20px;
-    line-height: 1.2;
-    padding-left: 40px;
-  }
-  .registration-form-input:-ms-input-placeholder {
-    font-size: 20px;
-    line-height: 1.2;
-    padding-left: 40px;
-  }
-  .registration-form-input::-ms-input-placeholder {
-    font-size: 20px;
-    line-height: 1.2;
-    padding-left: 40px;
-  }
-  .registration-form-input::placeholder {
-    font-size: 20px;
-    line-height: 1.2;
-    padding-left: 40px;
-  }
-  .registration-button {
-    margin-top: 60px;
-    width: 354px;
-    height: 70px;
-    font-size: 14px;
-    line-height: 1.214;
-    letter-spacing: 0.14em;
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1344px), screen and (min-resolution: 192dpi) and (min-width: 1344px), screen and (min-resolution: 2dppx) and (min-width: 1344px) {
-  .registration {
-    background-color: #111518;
-    background-image: url("/images/registration-img/registration-desktop@2x.png");
-  }
-}
+/*# sourceMappingURL=main.css.map */
