--- a/src/partials/traditions.html
+++ b/src/partials/traditions.html
@@ -1,1 +1,36 @@
-<h2>Traditions</h2>
+<section>
+    <div class="container">
+        <h2>tradition and love</h2>
+        <h3>how it’s made?</h3>
+        <div>
+            <img src="./images/traditions/home-pic4_desktop.jpg" alt="ecological milk">
+        </div>
+        <div>
+            <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. 
+            Nam vel justo cursus, faucibus lorem eget, egestas eros. 
+            Maecenas eleifend erat at justo fringilla.</p>
+            <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. 
+            Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, 
+            a feugiat urna maximus. Cras massa nibh, tincidunt.
+
+            Aliquam erat volutpat. Aenean accumsan.</p>
+            <button type="button" class="btn reverse">Read more
+            </button>
+        </div>
+        <ul class="traditions-list">
+            <li>
+                <img src="./images/traditions/icon1.jpg" alt="">
+                <h3>721</h3>
+                <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li><img src="./images/traditions/icon2.jpg" alt="">
+                <h3>16kg</h3>
+                <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li><img src="./images/traditions/icon3.jpg" alt="">
+                <h3>84</h3>
+                <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+        </ul>
+    </div>
+</section>
