products-first-HTML-img-some-styles

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,13 +4,13 @@
         <h2 class="name-section">products</h2>
         <ul class="products-list">
             <li class="products-item">
-                <img class="foto-products" src="./images/roze-mob.jpg" srcset="./images/roze-mob@2x.jpg 2x"
+                <img class="foto-products" src="./images/products/roze-mob.jpg" 
+                srcset="./images/products/roze-mob@2x.jpg 2x"
                     alt="ice_cream">
                 <h3 class="products-name">ice cream</h3>
                 <div class="doted">
                     <svg class="" width="50" height="15">* * *
-                        <use href="">
-                        </use>
+                        <use href=""></use>
                     </svg>
                 </div>
                 <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -20,17 +20,19 @@
                 </p>
                 <button type="button">
                     <svg class="" width="20" height="20">
-                        <use href=""></use>
+                        <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
             </li>
             <li class="products-item">
-                <img src="./images/roze-mob.jpg" srcset="./images/roze-mob@2x.jpg 2x" alt="ice_cream">
-                <h3 class="">ice cream</h3>
+                <img class="foto-products" 
+                src="./images/products/coffe-mob.jpg" 
+                srcset="./images/products/coffe-mob@2x.jpg 2x"
+                alt="ice_cream">
+                <h3 class="products-name">ice coffee</h3>
                 <div class="doted">
-                    <svg class="" width="" height="">
-                        <use href="">
-                        </use>
+                    <svg class="" width="50" height="15">* * *
+                        <use href=""></use>
                     </svg>
                 </div>
                 <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -39,33 +41,34 @@
                     aliqua facilisis.
                 </p>
                 <button type="button">
-                    <svg class="" width="" height="">
-                        <use href=""></use>
+                    <svg class="" width="20" height="20">
+                        <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
             </li>
             <li class="products-item">
-                <img src="./images/roze-mob.jpg" srcset="./images/roze-mob@2x.jpg 2x" alt="ice_cream">
-                <h3 class="">ice cream</h3>
+                <img class="foto-products" 
+                src="./images/products/choco-mob.jpg" 
+                srcset="./images/products/choco-mob@2x.jpg 2x"
+                alt="ice_cream">
+                <h3 class="products-name">milkshakes</h3>
                 <div class="doted">
-                    <svg class="" width="" height="">
+                    <svg class="" width="50" height="15">* * *
                         <use href="">
                         </use>
                     </svg>
                 </div>
-                <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                <p class="about-products">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor
                     incididunt ut labore et. dolore magna
                     aliqua facilisis.
                 </p>
                 <button type="button">
-                    <svg class="" width="" height="">
-                        <use href=""></use>
+                    <svg class="" width="20" height="20">
+                        <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
             </li>
         </ul>
-
     </div>
-
 </section>
