fix modal transform

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -30,7 +30,7 @@
 
   .backdrop.is-hidden & {
     // transform: scale(0) rotateX(-90deg);
-    transform: translateY(150%);
+    transform: translateY(100vh);
     transition: transform 500ms var(--timing-function);
   }
 }
