добавляет иконку и правильную геометрию

--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -1,6 +1,7 @@
 .problems-container {
     background-color: var(--b-dark);
-
+    margin: 0 auto;
+    padding-left: 20px;
     @media screen and (min-width: 320px) and (max-width: 767px) {
         height: 545px;
         padding-top: 50px;
@@ -10,11 +11,12 @@
         // width: 768px;
         height: 340px;
         padding-top: 59px;
+        padding-left: 42px;
     }
     @media screen and (min-width: 1200px) {
         height: 560px;
         padding-top: 100px;
-
+        padding-left: 183px;
     }
 }
 .problems-title {
@@ -50,10 +52,19 @@
         @include font(800, 46px, 1.3, 0.03em);
     }
 }
+.problems-icon {
+    display: none;
+
+@media screen and (min-width: 1200px) {
+    display: block;
+}
+}
+
 .problems-block-white {
     background-color: var(--txt-light);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-    z-index: 99;
+  
+    // margin:  0 auto;
     @media screen and (min-width: 320px) and (max-width: 767px) {
         width: 280px;
         height: 488px;
@@ -69,12 +80,16 @@
         padding-bottom: 26px;
     }
     @media screen and (min-width: 1200px) {
-        // width: 1314px;
+        position: absolute;
+        z-index: 99;
+        // left: 183px;
+        width: 1314px;
         padding-left: 114px;
         padding-right: 112px;
         padding-top: 70px;
         padding-bottom: 62px;
     }
+
 }
 
 @media screen and (min-width: 768px)  {
@@ -151,24 +166,14 @@
 .problems-container {
     position: relative;
     max-width: 1680px;
-
 }
 .problems-icon {
     position: absolute;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 0;
     fill: var(--txt-dark-grey);
 }
-.problems-block-white {
-    position: absolute;
-    top: 348;
-    left: 150;
-  
-    width: 1314px;
-    z-index: 99;
-  
-  
-}
+
 }
 
