Add slider in reviews section

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,17 +1,19 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="container">
-    <ul class="list">
+    <ul class="list slick-reviews">
       <li class="item">
         <img
           class="img"
           src="./images/reviews/reviews-1@1x.png"
           alt="testimonial"
         />
-        <p class="text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
+        <div class="text-wrap">
+          <p class="text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+        </div>
         <p class="name">Emily, Los Angeles</p>
       </li>
       <li class="item">
@@ -20,11 +22,13 @@
           src="./images/reviews/reviews-2@1x.png"
           alt="testimonial"
         />
-        <p class="text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
+        <div class="text-wrap">
+          <p class="text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+        </div>
         <p class="name">Rose, California</p>
       </li>
       <li class="item">
@@ -33,11 +37,13 @@
           src="./images/reviews/reviews-3@1x.png"
           alt="testimonial"
         />
-        <p class="text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
+        <div class="text-wrap">
+          <p class="text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+        </div>
         <p class="name">Emma, Washington</p>
       </li>
     </ul>
