--- a/src/sass/components/reviews/_reviews.scss
+++ b/src/sass/components/reviews/_reviews.scss
@@ -27,3 +27,30 @@
   margin-right: auto;
   margin-bottom: 60px;
 }
+
+.reviews .text-wrap {
+  padding: 30px;
+  margin-bottom: 30px;
+}
+
+.reviews .text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 2.55;
+
+  text-align: center;
+
+  color: $main-black-color;
+}
+
+.reviews .name::before {
+  display: block;
+  content: '';
+  width: 32px;
+  height: 4px;
+  margin-bottom: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: $main-white-color;
+  background-image: url('../images/icons/slider-dots.svg');
+}
