--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <header>
     <div class="container header" id="header">
-        <a href="">
-            <img src="./images/header/logo.svg" alt="" width="199px">
-            <!-- <svg class="logo">
-                <use href="./images/header/sprite.svg#"></use>
-              </svg> -->
+        <a href="" class="logo">
+            <svg class="logo-img">
+                <use href="./images/header/sprite-hero.svg#icon-logo"></use>
+            </svg>
+            ICECREAM
         </a>
-        <div class="menu-container" data-menu>
-            <button class="buy-now btn" type="button" data-modal-open>Buy now
+        <div class="menu-container" id="menu-container" data-menu>
+            <button class="buy-now btn" type="button">Buy now
               <svg class="buy-now-img">
                   <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
                 </svg>
@@ -33,7 +33,12 @@
                 </ul>
             </nav>
         </div>
-        <button type="button" class="menu-button" data-menu-button>
+        <button class="buy-now tablet btn" type="button" data-modal-open>Buy now
+            <svg class="buy-now-img">
+                <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
+              </svg>
+          </button>
+        <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
             <svg width="24px" height="24px" aria-label="Мобильное меню">
               <use
                 class="menu-button-icon open"
@@ -45,82 +50,82 @@
               ></use>
             </svg>
           </button>
+          <!-- Модальное окно заказа -->
+          <!-- <div class="backdrop is-hidden" data-modal>
+              <div class="modal">
+                <button
+                  class="close-button"
+                  aria-label="Закрыть окно заказа услуг"
+                  data-modal-close
+                >
+                  <svg class="close-button-img">
+                    <use href="./images/header/sprite-hero.svg#icon-close"></use>
+                  </svg>
+                </button>
+                <form action="#">
+                  <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+                  <ul class="contacts-input">
+                    <li class="contacts-input-item">
+                      <label class="input-title">
+                        Имя
+                        <input type="text" value="" name="name" required />
+                        <svg class="contacts-input-img">
+                          <use
+                            href="./images/header/sprite-hero.svg#icon-input-contact1"
+                          ></use>
+                        </svg>
+                      </label>
+                    </li>
+                    <li class="contacts-input-item">
+                      <label class="input-title">
+                        Телефон
+                        <input type="tel" value="" name="tel" required />
+                        <svg class="contacts-input-img">
+                          <use
+                            href="./images/header/sprite-hero.svg#icon-input-contact2"
+                          ></use>
+                        </svg>
+                      </label>
+                    </li>
+                    <li class="contacts-input-item">
+                      <label class="input-title">
+                        Почта
+                        <input type="email" value="" name="email" required />
+                        <svg class="contacts-input-img">
+                          <use
+                            href="./images/header/sprite-hero.svg#icon-input-contact3"
+                          ></use>
+                        </svg>
+                      </label>
+                    </li>
+                    <li class="contacts-input-item">
+                      <label class="input-title"
+                        >Комментарий
+                        <textarea
+                          class="comment"
+                          name="comment"
+                          placeholder="Введите текст"
+                        ></textarea>
+                      </label>
+                    </li>
+                  </ul>
+                  <input
+                    class="checkbox"
+                    type="checkbox"
+                    name="subscription policy"
+                    value=""
+                    id="policy"
+                  />
+                  <label class="subscription policy" for="policy">
+                    <span class="checkicon"></span>
+                    Соглашаюсь с рассылкой и принимаю
+                    <a class="contract-terms" href="">Условия договора</a>
+                  </label>
+                  <button class="subscribtion-button" type="submit">
+                    Отправить
+                  </button>
+                </form>
+              </div>
+          </div> -->
     </div>
-    <!-- Модальное окно заказа -->
-    <!-- <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-          <button
-            class="close-button"
-            aria-label="Закрыть окно заказа услуг"
-            data-modal-close
-          >
-            <svg class="close-button-img">
-              <use href="./images/header/sprite-hero.svg#icon-close"></use>
-            </svg>
-          </button>
-          <form action="#">
-            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-            <ul class="contacts-input">
-              <li class="contacts-input-item">
-                <label class="input-title">
-                  Имя
-                  <input type="text" value="" name="name" required />
-                  <svg class="contacts-input-img">
-                    <use
-                      href="./images/header/sprite-hero.svg#icon-input-contact1"
-                    ></use>
-                  </svg>
-                </label>
-              </li>
-              <li class="contacts-input-item">
-                <label class="input-title">
-                  Телефон
-                  <input type="tel" value="" name="tel" required />
-                  <svg class="contacts-input-img">
-                    <use
-                      href="./images/header/sprite-hero.svg#icon-input-contact2"
-                    ></use>
-                  </svg>
-                </label>
-              </li>
-              <li class="contacts-input-item">
-                <label class="input-title">
-                  Почта
-                  <input type="email" value="" name="email" required />
-                  <svg class="contacts-input-img">
-                    <use
-                      href="./images/header/sprite-hero.svg#icon-input-contact3"
-                    ></use>
-                  </svg>
-                </label>
-              </li>
-              <li class="contacts-input-item">
-                <label class="input-title"
-                  >Комментарий
-                  <textarea
-                    class="comment"
-                    name="comment"
-                    placeholder="Введите текст"
-                  ></textarea>
-                </label>
-              </li>
-            </ul>
-            <input
-              class="checkbox"
-              type="checkbox"
-              name="subscription policy"
-              value=""
-              id="policy"
-            />
-            <label class="subscription policy" for="policy">
-              <span class="checkicon"></span>
-              Соглашаюсь с рассылкой и принимаю
-              <a class="contract-terms" href="">Условия договора</a>
-            </label>
-            <button class="subscribtion-button" type="submit">
-              Отправить
-            </button>
-          </form>
-        </div>
-    </div> -->
 </header>
