--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,3 +2,7 @@ $orange: #ff6b09;
 $black: #111518;
 $grey: #b9b9b9;
 $white: #ffffff;
+
+$width-mobile: 320px;
+$width-tablet: 768px;
+$width-desktop: 1344px;
