--- a/src/sass/_section-card.scss
+++ b/src/sass/_section-card.scss
@@ -1,4 +1,36 @@
+.contacts-card {
+  background-image: linear-gradient(
+    to bottom,
+    $white 5%,
+    $card-bcg 5%,
+    $card-bcg
+  );
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+      to bottom,
+      $white 12%,
+      $card-bcg 12%,
+      $card-bcg
+    );
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        to bottom,
+        $white 12%,
+        $card-bcg 12%,
+        $card-bcg
+      ),
+      url(../images/contacts-card/card-bcg-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
 .container {
+  box-sizing: border-box;
+  z-index: 5;
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
@@ -26,20 +58,236 @@
   display: block;
   list-style: none;
   padding: 0;
+  font-family: DM Sans;
+  font-style: normal;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 100%;
+    justify-content: center;
+  }
 }
 
 .contacts-card-item {
+  box-sizing: border-box;
+  background-color: $white;
   display: block;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 
-  @media screen and (min-width: 320px) {
+  font-size: 12px;
+  padding: 43px 20px 43px 20px;
+
+  @media screen and (min-width: 320px) and (max-width: 1199px) {
     width: 220px;
-    height: 427px;
+
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc(100% - 90px / 3);
+    padding: 50px 30px 50px 30px;
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+    font-size: 14px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 330px;
+    padding: 50px 40px 50px 40px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+    font-size: 16px;
+  }
+}
+
+.item-header-one,
+.item-header-three {
+  margin: 0;
+  display: block;
+  width: 80px;
+  height: 16px;
+  align-items: center;
+  text-align: center;
+  color: $white;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+
+  background-color: $cafe-one;
+  border-radius: 4px;
+}
+
+.item-header-two {
+  margin: 0;
+  display: block;
+  width: 130px;
+  height: 16px;
+  align-items: center;
+  text-align: center;
+  color: $white;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+
+  background-color: $cafe-two;
+  border-radius: 4px;
+}
+
+.item-town {
+  display: block;
+  margin-top: 25px;
+  font-weight: 500;
+
+  letter-spacing: 0.04em;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+  }
+}
+
+.item-info {
+  display: block;
+  margin-top: 10px;
+  font-weight: 500;
+
+  line-height: 18px;
+  color: $gray-text;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #e1e1e1;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 15px;
+    padding-bottom: 30px;
+  }
+}
+
+.working-day {
+  display: block;
+  margin-top: 25px;
+  font-weight: 500;
+
+  line-height: 186%;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+  }
+}
+
+.working-time {
+  display: block;
+  color: $pink-text;
+  font-weight: 500;
+
+  line-height: 186%;
+}
+
+.card-phone {
+  display: block;
+  text-decoration: none;
+  margin-top: 25px;
+  padding-top: 25px;
+  color: $gray-text;
+  font-weight: 500;
+
+  line-height: 18px;
+  border-top: 1px solid #e1e1e1;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    padding-top: 30px;
+  }
+}
+
+.card-mail {
+  text-decoration: none;
+  color: $gray-text;
+  font-weight: 500;
+
+  line-height: 18px;
+}
+
+.contacts-card-btn-one {
+  display: block;
+  cursor: pointer;
+  width: 160px;
+  height: 44px;
+  color: $white;
+  background-color: $card-btm-one;
+  border: none;
+  font-size: 16px;
+  line-height: 21px;
+  border-radius: 22px;
+
+  @media screen and (max-width: 767px) {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 15px;
+  }
+}
+
+.contacts-card-btn-two {
+  display: block;
+  cursor: pointer;
+  width: 160px;
+  height: 44px;
+  color: $card-btm-one;
+  background-color: $white;
+  border: none;
+  font-size: 16px;
+  line-height: 21px;
+  border-radius: 22px;
+
+  &:hover,
+  &:focus {
+    background-color: $hover-btn-two;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
   }
 }
 
-.item-header-one {
+.contacts-card-btn {
+  box-sizing: border-box;
+  padding-bottom: 113px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    padding-bottom: 165px;
+  }
+}
+
+.btn-icon-one {
+  border: 2px;
+  width: 8px;
+  height: 10px;
+  margin-left: 8px;
+  fill: $white;
+}
+
+.btn-icon-two {
+  border: 2px;
+  width: 10px;
+  height: 10px;
+  margin-left: 15px;
+  fill: $card-btm-one;
+  color: $card-btm-one;
 }
