--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -21,7 +21,31 @@
   border-radius: 2px;
 }
 
+.contacts-card {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #ffffff), color-stop(5%, #fff5f675), to(#fff5f675));
+  background-image: linear-gradient(to bottom, #ffffff 5%, #fff5f675 5%, #fff5f675);
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-card {
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f675), to(#fff5f675));
+    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f675 12%, #fff5f675);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-card {
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f675), to(#fff5f675)), url(../images/contacts-card/card-bcg-img.png);
+    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f675 12%, #fff5f675), url(../images/contacts-card/card-bcg-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
 .container {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 5;
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
@@ -55,21 +79,268 @@
   display: block;
   list-style: none;
   padding: 0;
+  font-family: DM Sans;
+  font-style: normal;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-card-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-card-list {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .contacts-card-item {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #ffffff;
   display: block;
   -webkit-box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
           box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+  font-size: 12px;
+  padding: 43px 20px 43px 20px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
   .contacts-card-item {
     width: 220px;
-    height: 427px;
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-card-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-card-item {
+    width: calc(100% - 90px / 3);
+    padding: 50px 30px 50px 30px;
+    font-size: 14px;
+  }
+  .contacts-card-item:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-card-item {
+    width: 330px;
+    padding: 50px 40px 50px 40px;
+    font-size: 16px;
+  }
+  .contacts-card-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.item-header-one,
+.item-header-three {
+  margin: 0;
+  display: block;
+  width: 80px;
+  height: 16px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  color: #ffffff;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  background-color: #f0d1a5;
+  border-radius: 4px;
+}
+
+.item-header-two {
+  margin: 0;
+  display: block;
+  width: 130px;
+  height: 16px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  color: #ffffff;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  background-color: #c2e297;
+  border-radius: 4px;
+}
+
+.item-town {
+  display: block;
+  margin-top: 25px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+}
+
+@media screen and (min-width: 768px) {
+  .item-town {
+    margin-top: 30px;
+  }
+}
+
+.item-info {
+  display: block;
+  margin-top: 10px;
+  font-weight: 500;
+  line-height: 18px;
+  color: #907e82;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+@media screen and (min-width: 768px) {
+  .item-info {
+    margin-top: 15px;
+    padding-bottom: 30px;
+  }
+}
+
+.working-day {
+  display: block;
+  margin-top: 25px;
+  font-weight: 500;
+  line-height: 186%;
+}
+
+@media screen and (min-width: 768px) {
+  .working-day {
+    margin-top: 30px;
+  }
+}
+
+.working-time {
+  display: block;
+  color: #ffa5ba;
+  font-weight: 500;
+  line-height: 186%;
+}
+
+.card-phone {
+  display: block;
+  text-decoration: none;
+  margin-top: 25px;
+  padding-top: 25px;
+  color: #907e82;
+  font-weight: 500;
+  line-height: 18px;
+  border-top: 1px solid #e1e1e1;
+}
+
+@media screen and (min-width: 768px) {
+  .card-phone {
+    margin-top: 30px;
+    padding-top: 30px;
+  }
+}
+
+.card-mail {
+  text-decoration: none;
+  color: #907e82;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.contacts-card-btn-one {
+  display: block;
+  cursor: pointer;
+  width: 160px;
+  height: 44px;
+  color: #ffffff;
+  background-color: #d41342;
+  border: none;
+  font-size: 16px;
+  line-height: 21px;
+  border-radius: 22px;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-card-btn-one {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-card-btn-one {
+    margin-right: 15px;
+  }
+}
+
+.contacts-card-btn-two {
+  display: block;
+  cursor: pointer;
+  width: 160px;
+  height: 44px;
+  color: #d41342;
+  background-color: #ffffff;
+  border: none;
+  font-size: 16px;
+  line-height: 21px;
+  border-radius: 22px;
+}
+
+.contacts-card-btn-two:hover, .contacts-card-btn-two:focus {
+  background-color: #ecebeb;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-card-btn-two {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.contacts-card-btn {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-bottom: 113px;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-card-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 80px;
+    padding-bottom: 165px;
+  }
+}
+
+.btn-icon-one {
+  border: 2px;
+  width: 8px;
+  height: 10px;
+  margin-left: 8px;
+  fill: #ffffff;
+}
+
+.btn-icon-two {
+  border: 2px;
+  width: 10px;
+  height: 10px;
+  margin-left: 15px;
+  fill: #d41342;
+  color: #d41342;
 }
 /*# sourceMappingURL=main.css.map */
