--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -28,12 +28,12 @@
 }
 
 .registration-form__header {
-  @include font(800, 14px, 1.357, 0.03em);
+  @include font(800, 14px, 1.357, 0.03em, $white);
   margin-bottom: 30px;
 }
 
 .registration-form__description {
-  @include font(600, 12px, 1.25, 0.08em);
+  @include font(600, 12px, 1.25, 0.08em, $white);
   margin-bottom: 30px;
 }
 
@@ -48,7 +48,7 @@
   padding: 14px 0;
   margin-top: 50px;
   border: none;
-  @include font(700, 12px, 1.25, 0.08em);
+  @include font(700, 12px, 1.25, 0.08em, $white);
   color: $white;
   text-transform: uppercase;
   text-align: center;
@@ -70,13 +70,13 @@
   color: $white;
   background-color: transparent;
   border: 1px solid $white;
-  @include font(600, 14px, 1.214, 0.08em);
+  @include font(600, 14px, 1.214, 0.08em, $white);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   outline: none;
 
   &::placeholder {
-    @include font(600, 14px, 1.214, 0.08em);
+    @include font(600, 14px, 1.214, 0.08em, $white);
     color: $white;
   }
 
@@ -97,11 +97,11 @@
 
 @media screen and (min-width: $tablet) {
   .registration-form__header {
-    @include font(800, 26px, 1.307, 0.03em);
+    @include font(800, 26px, 1.307, 0.03em, $white);
   }
 
   .registration-form__description {
-    @include font(600, 14px, 1.214, 0.08em);
+    @include font(600, 14px, 1.214, 0.08em, $white);
     margin-bottom: 30px;
   }
 
@@ -119,11 +119,11 @@
     padding: 50px 0 70px 0;
   }
   .registration-form__header {
-    @include font(800, 26px, 1.3, 0.03em);
+    @include font(800, 26px, 1.3, 0.03em, $white);
   }
 
   .registration-form__description {
-    @include font(600, 14px, 1.21, 0.08em);
+    @include font(600, 14px, 1.21, 0.08em, $white);
     margin-bottom: 40px;
   }
 }
@@ -145,19 +145,19 @@
 
   .registration-form__header {
     width: 1090px;
-    @include font(800, 46px, 1.3, 0.03em);
+    @include font(800, 46px, 1.3, 0.03em, $white);
     margin-bottom: 50px;
   }
 
   .registration-form__description {
-    @include font(600, 30px, 1.233, 0.08em);
+    @include font(600, 30px, 1.233, 0.08em, $white);
     margin-bottom: 56px;
   }
 
   .registration-form__input {
     width: 478px;
     height: 70px;
-    @include font(600, 20px, 1.2, 0.08em);
+    @include font(600, 20px, 1.2, 0.08em, $white);
   }
 
   .registration-form__field + .registration-form__field {
@@ -168,6 +168,6 @@
     margin-top: 80px;
     width: 354px;
     height: 70px;
-    @include font(700, 14px, 1.214, 0.08em);
+    @include font(700, 14px, 1.214, 0.08em, $white);
   }
 }
