--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,16 +4,17 @@ $text-grey: #b9b9b9;
 $accent-color: #ff6b09;
 $white: #ffffff;
 $bg-gray: #f1f1f1;
-$main-font: 'Monserat', sans-serif;
+$main-font: 'Montserrat', sans-serif;
 $transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 $mobile: 320px;
 $tablet: 768px;
 $desktop: 1344px;
 
-@mixin font($fw, $fs, $lh, $ls) {
+@mixin font($fw, $fs, $lh, $ls, $cl) {
   font-weight: $fw;
   font-size: $fs;
   line-height: $lh;
   letter-spacing: $ls;
+  color: $cl;
 }
