--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -33,9 +33,7 @@
     padding: 20px 14px 20px 30px;
     background-color: var(--primary-white-color);   
     @media screen and (min-width:768px) {
-    top: 188px;
-    display: flex;
-    align-content: space-between;
+    top: 188px;    
     max-width: 688px; 
     height: 303px;
     padding: 30px 46px 26px 96px;     
@@ -73,7 +71,8 @@
     &:not(:last-child) {
     margin-bottom: 5px;}}
     @media screen and (min-width:1344px) {
-    font-size: 20px;    
+    font-size: 20px;
+    line-height: 1.649;    
     margin-bottom: 10px;}
     }    
 
@@ -83,8 +82,12 @@
     line-height: 1.714;
     letter-spacing: 0.08em;
     color: var(--title-text-color);
+    @media screen and (min-width:768px) {
+    line-height: 1.42;
+    }
     @media screen and (min-width:1344px) {
-    font-size: 20px;    
+    font-size: 20px;
+    line-height: 1.4;    
     }    
 }
 .problems-item {
@@ -93,16 +96,23 @@
 margin-bottom: 10px;}
 }
 @media screen and (min-width:768px) and (max-width:1343px) {
-flex: 1 0 50%;}
+flex: 1 0 50%;
+&:nth-child(-n+2){
+margin-bottom: 8px;}
+&:nth-child(n+5) {
+ margin-top: 32px;
+}}
 @media screen and (min-width:1344px){
-    flex: 1 0 33%;   
-    }   
-        }
+flex: 1 0 33%;
+&:nth-child(-n+3){
+margin-bottom: 32px;}   
+}   
+}
 
 .problems-list {
-    @media screen and (min-width:768px) {
-        flex-wrap: wrap;
-        display: flex;
-        justify-content: space-between;
+@media screen and (min-width:768px) {
+flex-wrap: wrap;
+display: flex;
+justify-content: space-between;
              }}
 
