--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .registration-section {
     background-image: url('../images/form/form-mob-min.png');
     padding-bottom: 48px;
@@ -65,9 +65,11 @@
     @include font(800, 26px, 1.307);
   }
   @media screen and (min-width: 1344px) {
-    @include font(800, 46px, 1.304);
-    width: 1090px;
+    @include font(800, 46px, 1.3);
     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1090px;
     margin-bottom: 50px;
   }
 }
@@ -89,8 +91,6 @@
   }
   @media screen and (min-width: 1344px) {
     @include font(600, 30px, 1.23);
-    width: 1090px;
-    display: block;
     margin-bottom: 56px;
   }
 }
@@ -111,9 +111,13 @@
   margin-bottom: 20px;
   background-color: transparent;
   padding-left: 28px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #ffffff;
   &:focus {
     outline: none;
   }
+
   @media screen and (min-width: 768px) and (max-width: 1343px) {
     width: 390px;
     display: block;
