--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,11 @@
 <section class="reviews">
     <div class="container">
         <div class="reviews-foto"></div>
-        <div>
-            <div class="reviews-commit">
+        <div class="reviews-commit"> <svg>
+                    <use href="./images/reviews/icon.svg#icon-quotes"></use>
+                </svg>
+            <div class="i">
+               
                 <p>Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
                 congue. Lorem ipsum primis in nibh vel risus.</p>
             </div>
